<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductForm">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/text_title_form" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFormProduct"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/broken1" />

        <org.osmdroid.views.MapView
            android:id="@+id/mapForm"
            android:layout_width="250dp"
            android:layout_height="250dp"/>

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editNameFormProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/text_hint_title_form"
                android:ems="10"
                android:paddingBottom="10dp"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/editDescriptionFormProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/text_hint_description_form"
                android:ems="10"
                android:paddingBottom="10dp"
                android:inputType="textPersonName"
                android:paddingRight="20dp" />

            <EditText
                android:id="@+id/editPriceFormProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/text_hint_price_form"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingRight="20dp" />
            <EditText
                android:id="@+id/editImageFormProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/text_hint_image_form"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingRight="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textLatitudForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="10sp"
                    android:text="" />

                <TextView
                    android:id="@+id/textLongitudForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:textSize="10sp"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFormProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/btn_send_form" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/btn_cancel_form" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>