<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondotwo"
    android:backgroundTint="#70272d2d"
    android:backgroundTintMode="src_over"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="400dp"
        android:paddingBottom="90dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        android:orientation="vertical">

        <EditText
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="30"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/text_hint_email_login"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/editPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="30"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/text_hint_pass_login"
                android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:text="@string/btn_enter_login" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:text="@string/btn_register_login" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>